# Build-a-Space-Biology-Knowledge-Engine

./: README.md
bexrp_code/: pmc_articles_csv_metadata.db  pmc_toolkit.py  readme.md
bexrp_code/static/css/: imlazy.css  style.css
bexrp_code/static/js/: aboutus.js  charts.js  index.js  knowledgegraph.js
bexrp_code/templates/: 404.html  aboutus.html  charts.html  index.html  knowledgg.html
docs/: app.py  pyproject.toml  requirements.txt
