[project]
name = "FINAL_BEXRP"
version = "0.1.0"
description = "finally im freeeeee"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "flask-compress>=1.18",
    "keybert>=0.9.0",
    "livereload>=2.7.1",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
